Added text to track progress/errors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h4 id="hea">YT-downlaoder</h4>
     <input type="text" id="url" name="url" placeholder="Insert url if not fetched automatically" />
     <button id="btn" name="btn">Download</button>
-    <h5 id="error" class="error-false">URL is not valid</h5>
+    <h5 id="output" class="hidden"></h5>
 
     <script src=" js/logic.js"></script>
     <script src="js/background.js"></script>
